--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
+
 spring.datasource.username=root
-spring.datasource.password=Kan@2911
+#spring.datasource.password=Kan@2911
+spring.datasource.password=epicC@der2022
+
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+
+#logging.level.org.springframework=debug
